--- a/dev_env/create_serivng_endpoint.ipynb
+++ b/dev_env/create_serivng_endpoint.ipynb
@@ -45,7 +45,10 @@
     "# --------------------------------------------------\n",
     "# 2️⃣ LOAD MODEL SERVING CONFIG FROM GIT VARIABLE\n",
     "# --------------------------------------------------\n",
-    "MODEL_SERVING_CONFIG_RAW = os.getenv(\"MODEL_SERVING_CONFIG\")\n",
+    "try:\n",
+    "    MODEL_SERVING_CONFIG_RAW = dbutils.widgets.get(\"MODEL_SERVING_CONFIG\")\n",
+    "except:\n",
+    "    MODEL_SERVING_CONFIG_RAW = os.getenv(\"MODEL_SERVING_CONFIG\", \"{}\")\n",
     "\n",
     "if not MODEL_SERVING_CONFIG_RAW:\n",
     "    raise ValueError(\"❌ MODEL_SERVING_CONFIG Git variable not set\")\n",
