--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -57,7 +57,7 @@
     "try:\n",
     "    dbutils.widgets.text(\n",
     "        \"MODELS_TO_TRAIN\",\n",
-    "        os.getenv(\"MODELS_TO_TRAIN\", \"\"),\n",
+    "        \"\",  # ✅ CHANGE 1: Empty default (Git variable will set it)\n",
     "        \"Models to Train\"\n",
     "    )\n",
     "except:\n",
@@ -66,17 +66,78 @@
     "# 🔥 GET MODELS TO TRAIN (Git / Job Variable)\n",
     "\n",
     "def get_models_to_train():\n",
+    "    \"\"\"\n",
+    "    ✅ ENHANCED: Better validation and \"all\" keyword support\n",
+    "    \"\"\"\n",
+    "    # Get available models from experiments_config.yml\n",
+    "    available_models = list(experiments_cfg.get(\"models\", {}).keys())\n",
+    "    \n",
+    "    if not available_models:\n",
+    "        raise ValueError(\"❌ No models defined in experiments_config.yml\")\n",
+    "    \n",
+    "    # Try to get value from widget first, then environment\n",
+    "    value = None\n",
     "    try:\n",
-    "        val = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
+    "        value = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
+    "        print(f\"📌 MODELS_TO_TRAIN from Widget: '{value}'\")\n",
     "    except:\n",
-    "        val = os.getenv(\"MODELS_TO_TRAIN\")\n",
+    "        value = os.getenv(\"MODELS_TO_TRAIN\", \"\")\n",
+    "        print(f\"📌 MODELS_TO_TRAIN from ENV: '{value}'\")\n",
+    "    \n",
+    "    # Clean the value\n",
+    "    if value:\n",
+    "        value = value.strip()\n",
+    "    \n",
+    "    # ✅ Handle \"None\" string explicitly\n",
+    "    if not value or value == \"\" or value.lower() in [\"none\", \"null\", \"undefined\"]:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ MODELS_TO_TRAIN is not set!\\n\"\n",
+    "            f\"   Available models in experiments_config.yml: {available_models}\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   Set via Git CI/CD:\\n\"\n",
+    "            f\"   - GitHub: Set variable MODELS_TO_TRAIN='random_forest,xgboost'\\n\"\n",
+    "            f\"   - GitLab: Set CI/CD variable MODELS_TO_TRAIN='random_forest,xgboost'\\n\"\n",
+    "            f\"   - Databricks Job: Pass as parameter\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   Special keywords:\\n\"\n",
+    "            f\"   - 'all' = train all available models\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   Current value received: '{value}'\"\n",
+    "        )\n",
+    "    \n",
+    "    # ✅ Handle \"all\" keyword\n",
+    "    if value.lower() == \"all\":\n",
+    "        print(f\"✅ Training ALL models: {available_models}\")\n",
+    "        return available_models\n",
+    "    \n",
+    "    # Parse comma-separated values\n",
+    "    models = [m.strip() for m in value.split(\",\") if m.strip()]\n",
+    "    \n",
+    "    if not models:\n",
+    "        raise ValueError(f\"❌ No valid models found in MODELS_TO_TRAIN='{value}'\")\n",
+    "    \n",
+    "    # ✅ Validate against experiments_config.yml\n",
+    "    invalid_models = [m for m in models if m not in available_models]\n",
+    "    \n",
+    "    if invalid_models:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ Invalid model names: {invalid_models}\\n\"\n",
+    "            f\"   Available in experiments_config.yml: {available_models}\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   You tried to train: {models}\\n\"\n",
+    "            f\"   Check your Git variable or experiments_config.yml\"\n",
+    "        )\n",
+    "    \n",
+    "    print(f\"✅ Training selected models: {models}\")\n",
+    "    return models\n",
     "\n",
-    "    if not val or val.lower() == \"none\":\n",
-    "        raise ValueError(\"❌ MODELS_TO_TRAIN is not set or invalid\")\n",
-    "\n",
-    "    return [m.strip() for m in val.split(\",\") if m.strip()]\n",
-    "\n",
-    "MODELS_TO_TRAIN = get_models_to_train()\n",
+    "# ✅ CHANGE 2: Call validation early - before any MLflow operations\n",
+    "try:\n",
+    "    MODELS_TO_TRAIN = get_models_to_train()\n",
+    "    print(f\"\\n📋 Models to train: {MODELS_TO_TRAIN}\\n\")\n",
+    "except ValueError as e:\n",
+    "    print(str(e))\n",
+    "    dbutils.notebook.exit(\"FAILED: Invalid MODELS_TO_TRAIN configuration\")\n",
     "\n",
     "# 🔥 EXPERIMENT NAME HELPER\n",
     "\n",
@@ -157,9 +218,11 @@
     "for MODEL_TYPE in MODELS_TO_TRAIN:\n",
     "\n",
     "    if MODEL_TYPE not in MODEL_CLASSES:\n",
+    "        print(f\"⚠️  Skipping {MODEL_TYPE} - model class not found\")\n",
     "        continue\n",
     "\n",
     "    if MODEL_TYPE not in experiments_cfg[\"models\"]:\n",
+    "        print(f\"⚠️  Skipping {MODEL_TYPE} - not in experiments_config.yml\")\n",
     "        continue\n",
     "\n",
     "    EXPERIMENT_NAME = get_experiment_name_for_model(MODEL_TYPE, BASE_EXPERIMENT_NAME)\n",
@@ -231,7 +294,7 @@
     "                input_example=X_train.head(5)\n",
     "            )\n",
     "\n",
-    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n"
+    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")"
    ]
   }
  ],
