--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -142,22 +142,22 @@
     "# 🔥 EXPERIMENT NAME HELPER\n",
     "\n",
     "def get_experiment_name_for_model(model_type, base_experiment_name):\n",
+    "    \"\"\"\n",
+    "    ✅ FIXED: Use base experiment name directly without modification\n",
+    "    Creates sub-experiments under the existing experiment path\n",
+    "    \"\"\"\n",
     "    model_abbrev_map = {\n",
     "        \"random_forest\": \"RF\",\n",
     "        \"xgboost\": \"XGB\",\n",
     "        \"logistic_regression\": \"LR\"\n",
     "    }\n",
-    "\n",
-    "    if \"/\" in base_experiment_name:\n",
-    "        path, base = base_experiment_name.rsplit(\"/\", 1)\n",
-    "        base = base.replace(\"_ML_Experiments\", \"\").replace(\"_Experiments\", \"\")\n",
-    "        parent = f\"{path}/{base}_Experiments\"\n",
-    "    else:\n",
-    "        base = base_experiment_name.replace(\"_ML_Experiments\", \"\").replace(\"_Experiments\", \"\")\n",
-    "        parent = f\"{base}_Experiments\"\n",
-    "\n",
+    "    \n",
     "    abbrev = model_abbrev_map.get(model_type, model_type[:3].upper())\n",
-    "    return f\"{parent}/{abbrev}_Experiments\"\n",
+    "    \n",
+    "    # ✅ SIMPLE: Just append model abbreviation to base path\n",
+    "    # Before: /Shared/CreditRisk_ML_Experiments → /Shared/CreditRisk_Experiments/XGB_Experiments\n",
+    "    # After:  /Shared/CreditRisk_ML_Experiments → /Shared/CreditRisk_ML_Experiments/XGB_Experiments\n",
+    "    return f\"{base_experiment_name}/{abbrev}_Experiments\"\n",
     "\n",
     "# 🔥 PIPELINE SETTINGS\n",
     "\n",
