fix the issue in train.py script

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -139,26 +139,6 @@
     "    print(str(e))\n",
     "    dbutils.notebook.exit(\"FAILED: Invalid MODELS_TO_TRAIN configuration\")\n",
     "\n",
-    "# 🔥 EXPERIMENT NAME HELPER\n",
-    "\n",
-    "def get_experiment_name_for_model(model_type, base_experiment_name):\n",
-    "    \"\"\"\n",
-    "    ✅ FIXED: Use base experiment name directly without modification\n",
-    "    Creates sub-experiments under the existing experiment path\n",
-    "    \"\"\"\n",
-    "    model_abbrev_map = {\n",
-    "        \"random_forest\": \"RF\",\n",
-    "        \"xgboost\": \"XGB\",\n",
-    "        \"logistic_regression\": \"LR\"\n",
-    "    }\n",
-    "    \n",
-    "    abbrev = model_abbrev_map.get(model_type, model_type[:3].upper())\n",
-    "    \n",
-    "    # ✅ SIMPLE: Just append model abbreviation to base path\n",
-    "    # Before: /Shared/CreditRisk_ML_Experiments → /Shared/CreditRisk_Experiments/XGB_Experiments\n",
-    "    # After:  /Shared/CreditRisk_ML_Experiments → /Shared/CreditRisk_ML_Experiments/XGB_Experiments\n",
-    "    return f\"{base_experiment_name}/{abbrev}_Experiments\"\n",
-    "\n",
     "# 🔥 PIPELINE SETTINGS\n",
     "\n",
     "BASE_EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
@@ -207,6 +187,12 @@
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "\n",
+    "# ✅✅✅ NEW: Set parent experiment (single experiment for all models) ✅✅✅\n",
+    "print(f\"🔬 Setting MLflow experiment: {BASE_EXPERIMENT_NAME}\")\n",
+    "mlflow.set_experiment(BASE_EXPERIMENT_NAME)\n",
+    "print(f\"✅ Experiment set successfully\\n\")\n",
+    "# ✅✅✅ END NEW ✅✅✅\n",
+    "\n",
     "MODEL_CLASSES = {\n",
     "    \"random_forest\": RandomForestClassifier,\n",
     "    \"xgboost\": XGBClassifier,\n",
@@ -225,11 +211,16 @@
     "        print(f\"⚠️  Skipping {MODEL_TYPE} - not in experiments_config.yml\")\n",
     "        continue\n",
     "\n",
-    "    EXPERIMENT_NAME = get_experiment_name_for_model(MODEL_TYPE, BASE_EXPERIMENT_NAME)\n",
-    "    mlflow.set_experiment(EXPERIMENT_NAME)\n",
+    "    # ✅ REMOVED: No child experiment creation\n",
+    "    # EXPERIMENT_NAME = get_experiment_name_for_model(MODEL_TYPE, BASE_EXPERIMENT_NAME)\n",
+    "    # mlflow.set_experiment(EXPERIMENT_NAME)\n",
     "\n",
     "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
     "    EXPERIMENT_LIST = experiments_cfg[\"models\"][MODEL_TYPE][\"experiments\"]\n",
+    "\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"🎯 Training {MODEL_TYPE.upper()} - {len(EXPERIMENT_LIST)} experiments\")\n",
+    "    print(f\"{'='*80}\")\n",
     "\n",
     "    for exp in EXPERIMENT_LIST:\n",
     "\n",
@@ -283,7 +274,7 @@
     "\n",
     "            mlflow.log_params(params)\n",
     "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
-    "            mlflow.log_param(\"experiment_name\", EXPERIMENT_NAME)\n",
+    "            mlflow.log_param(\"experiment_name\", BASE_EXPERIMENT_NAME)  # ✅ Log parent experiment name\n",
     "\n",
     "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
@@ -293,8 +284,12 @@
     "                signature=signature,\n",
     "                input_example=X_train.head(5)\n",
     "            )\n",
+    "            \n",
+    "            print(f\"   ✅ {exp_name}\")\n",
     "\n",
-    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")"
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n",
+    "print(\"=\" * 80)"
    ]
   }
  ],
