--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -32,11 +32,9 @@
     "\n",
     "# ---------------------- LOAD CONFIG FILES ----------------------\n",
     "try:\n",
-    "    # Load pipeline config\n",
     "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
     "    \n",
-    "    # Load experiments config (for reference if needed)\n",
     "    with open(\"experiments_config.yml\", \"r\") as f:\n",
     "        experiments_cfg = yaml.safe_load(f)\n",
     "    \n",
@@ -44,6 +42,75 @@
     "except Exception as e:\n",
     "    print(f\"❌ Failed to load config: {e}\")\n",
     "    sys.exit(1)\n",
+    "\n",
+    "\n",
+    "# ✅✅✅ FIX: ADD WIDGET LOGIC ✅✅✅\n",
+    "# Create widget to receive parameter from orchestration script\n",
+    "try:\n",
+    "    dbutils.widgets.text(\"MODELS_TO_TRAIN\", \"\", \"Models to Register\")\n",
+    "    dbutils.widgets.text(\"environment\", \"development\", \"Environment\")\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "def get_models_to_register():\n",
+    "    \"\"\"\n",
+    "    Get models to register from widget or environment variable\n",
+    "    Matches the logic from training script\n",
+    "    \"\"\"\n",
+    "    available_models = list(experiments_cfg.get(\"models\", {}).keys())\n",
+    "    \n",
+    "    if not available_models:\n",
+    "        raise ValueError(\"❌ No models defined in experiments_config.yml\")\n",
+    "    \n",
+    "    # ✅ CRITICAL: Try widget FIRST (for notebook parameters), then environment\n",
+    "    value = None\n",
+    "    try:\n",
+    "        value = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
+    "        print(f\"📌 MODELS_TO_TRAIN from Widget: '{value}'\")\n",
+    "    except:\n",
+    "        # Fallback to environment variable\n",
+    "        value = os.getenv(\"MODELS_TO_TRAIN\", \"\")\n",
+    "        print(f\"📌 MODELS_TO_TRAIN from ENV: '{value}'\")\n",
+    "    \n",
+    "    if value:\n",
+    "        value = value.strip()\n",
+    "    \n",
+    "    if not value or value == \"\" or value.lower() in [\"none\", \"null\", \"undefined\"]:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ MODELS_TO_TRAIN is not set!\\n\"\n",
+    "            f\"   Available models in experiments_config.yml: {available_models}\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   This parameter should be passed from the orchestration script.\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   Expected format:\\n\"\n",
+    "            f\"   - Single model: 'random_forest'\\n\"\n",
+    "            f\"   - Multiple models: 'random_forest,xgboost'\\n\"\n",
+    "            f\"   - All models: 'all'\\n\"\n",
+    "            f\"   \\n\"\n",
+    "            f\"   Current value received: '{value}'\"\n",
+    "        )\n",
+    "    \n",
+    "    if value.lower() == \"all\":\n",
+    "        print(f\"✅ Registering ALL models: {available_models}\")\n",
+    "        return available_models\n",
+    "    \n",
+    "    models = [m.strip() for m in value.split(\",\") if m.strip()]\n",
+    "    \n",
+    "    if not models:\n",
+    "        raise ValueError(f\"❌ No valid models found in MODELS_TO_TRAIN='{value}'\")\n",
+    "    \n",
+    "    invalid_models = [m for m in models if m not in available_models]\n",
+    "    \n",
+    "    if invalid_models:\n",
+    "        raise ValueError(\n",
+    "            f\"❌ Invalid model names: {invalid_models}\\n\"\n",
+    "            f\"   Available in experiments_config.yml: {available_models}\\n\"\n",
+    "            f\"   You tried to register: {models}\"\n",
+    "        )\n",
+    "    \n",
+    "    print(f\"✅ Models to register: {models}\")\n",
+    "    return models\n",
+    "# ✅✅✅ END FIX ✅✅✅\n",
     "\n",
     "\n",
     "# ---------------------- CONFIGURATION CLASS ----------------------\n",
@@ -54,13 +121,11 @@
     "        Args:\n",
     "            model_type: e.g., 'random_forest', 'xgboost'\n",
     "        \"\"\"\n",
-    "        # ✅ CHANGED: Use models section instead of model section\n",
     "        UC_CATALOG = pipeline_cfg[\"models\"][\"catalog\"]\n",
     "        UC_SCHEMA = pipeline_cfg[\"models\"][\"schema\"]\n",
     "        BASE_NAME = pipeline_cfg[\"models\"][\"base_name\"]\n",
     "        NAMING_FMT = pipeline_cfg[\"models\"][\"naming\"][\"format\"]\n",
     "\n",
-    "        # Generate model name dynamically\n",
     "        self.MODEL_NAME = NAMING_FMT.format(\n",
     "            catalog=UC_CATALOG,\n",
     "            schema=UC_SCHEMA,\n",
@@ -79,13 +144,12 @@
     "\n",
     "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
     "\n",
-    "        # Slack webhook (optional)\n",
     "        self.SLACK_WEBHOOK = None\n",
     "        try:\n",
     "            self.SLACK_WEBHOOK = dbutils.secrets.get(\"shared-scope\", \"SLACK_WEBHOOK_URL\")\n",
     "            print(f\"   🔐 Slack webhook loaded for {model_type}\")\n",
     "        except:\n",
-    "            pass  # Silent fail - Slack is optional\n",
+    "            pass\n",
     "\n",
     "\n",
     "# ---------------------- SLACK NOTIFIER ----------------------\n",
@@ -123,7 +187,7 @@
     "        StructField(\"timestamp\", TimestampType(), True),\n",
     "        StructField(\"run_id\", StringType(), True),\n",
     "        StructField(\"run_name\", StringType(), True),\n",
-    "        StructField(\"model_type\", StringType(), True),  # ✅ NEW: Track model type\n",
+    "        StructField(\"model_type\", StringType(), True),\n",
     "        StructField(\"model_name\", StringType(), True),\n",
     "        StructField(\"primary_metric\", StringType(), True),\n",
     "        StructField(\"primary_metric_value\", DoubleType(), True),\n",
@@ -161,7 +225,6 @@
     "        max_results=500\n",
     "    )\n",
     "\n",
-    "    # ✅ CHANGED: Filter runs by model type (check if model_type is in run_name)\n",
     "    filtered_runs = [\n",
     "        run for run in runs\n",
     "        if config.MODEL_TYPE in (run.info.run_name or \"\")\n",
@@ -234,7 +297,6 @@
     "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    version = reg.version\n",
     "\n",
-    "    # Set version tags\n",
     "    try:\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
@@ -263,7 +325,7 @@
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
     "        \"run_name\": model[\"run_name\"],\n",
-    "        \"model_type\": config.MODEL_TYPE,  # ✅ NEW: Add model type\n",
+    "        \"model_type\": config.MODEL_TYPE,\n",
     "        \"model_name\": config.MODEL_NAME,\n",
     "        \"primary_metric\": config.PRIMARY_METRIC,\n",
     "        \"primary_metric_value\": float(model[\"primary_metric\"]) if model[\"primary_metric\"] else 0.0,\n",
@@ -294,17 +356,14 @@
     "    print(f\"🚀 PROCESSING MODEL TYPE: {model_type.upper()}\")\n",
     "    print(f\"{'='*80}\\n\")\n",
     "    \n",
-    "    # Create config for this model type\n",
     "    config = Config(model_type)\n",
     "    \n",
     "    print(f\"📦 Model Registry: {config.MODEL_NAME}\")\n",
     "    print(f\"🔍 Primary Metric: {config.PRIMARY_METRIC}\")\n",
     "    print(f\"🛡️  Duplicate Check: {'ENABLED' if config.DUPLICATE_CHECK_ENABLED else 'DISABLED'}\\n\")\n",
     "    \n",
-    "    # Ensure table exists\n",
     "    ensure_table_exists(config.REGISTRATION_LOG_TABLE)\n",
     "    \n",
-    "    # Get runs for this model type\n",
     "    runs = get_runs_for_model(config)\n",
     "    \n",
     "    if not runs:\n",
@@ -315,7 +374,6 @@
     "    skipped_count = 0\n",
     "    processed_run_ids = set()\n",
     "    \n",
-    "    # Process each run\n",
     "    for idx, model in enumerate(runs, start=1):\n",
     "        \n",
     "        if model['run_id'] in processed_run_ids:\n",
@@ -326,12 +384,10 @@
     "        print(f\"\\n   [{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
     "        print(f\"      Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
     "        \n",
-    "        # Check if already logged\n",
     "        if is_already_logged(model['run_id'], config.REGISTRATION_LOG_TABLE):\n",
     "            print(f\"      ⏭️  Skipped — Already processed earlier\")\n",
     "            continue\n",
     "        \n",
-    "        # Try to register\n",
     "        version = register_model(model, config)\n",
     "        \n",
     "        if version:\n",
@@ -361,26 +417,23 @@
     "def main():\n",
     "    \"\"\"\n",
     "    Main registration pipeline:\n",
-    "    1. Parse model types from Git variable\n",
+    "    1. Parse model types from widget/environment\n",
     "    2. For each model type, process all runs\n",
     "    3. Register unique models to Unity Catalog\n",
     "    \"\"\"\n",
     "    print(\"\\n🚀 Starting Multi-Model Registration Pipeline...\\n\")\n",
     "    \n",
-    "    # ✅ Parse model types from Git variable\n",
-    "    MODEL_TYPES_ENV = os.getenv(\"MODELS_TO_TRAIN\")\n",
-    "\n",
-    "    if not MODEL_TYPES_ENV:\n",
-    "        raise ValueError(\"❌ MODELS_TO_TRAIN Git variable is not set\")\n",
-    "\n",
-    "    MODEL_TYPES = [m.strip() for m in MODEL_TYPES_ENV.split(\",\")]\n",
-    "\n",
-    "    print(f\"📋 Models to register: {MODEL_TYPES}\\n\")\n",
+    "    # ✅ Use the new function with widget support\n",
+    "    try:\n",
+    "        MODEL_TYPES = get_models_to_register()\n",
+    "        print(f\"\\n📋 Models to register: {MODEL_TYPES}\\n\")\n",
+    "    except ValueError as e:\n",
+    "        print(str(e))\n",
+    "        dbutils.notebook.exit(\"FAILED: Invalid MODELS_TO_TRAIN configuration\")\n",
+    "        return\n",
     "    \n",
-    "    # Initialize Slack notifier\n",
-    "    slack = SlackNotifier(None)  # Will be initialized per model type\n",
+    "    slack = SlackNotifier(None)\n",
     "    \n",
-    "    # Track overall stats\n",
     "    total_stats = {\n",
     "        \"registered\": 0,\n",
     "        \"skipped\": 0,\n",
@@ -389,13 +442,11 @@
     "    \n",
     "    results_by_model = {}\n",
     "    \n",
-    "    # Process each model type\n",
     "    for model_type in MODEL_TYPES:\n",
     "        try:\n",
     "            stats = process_model_type(model_type, slack)\n",
     "            results_by_model[model_type] = stats\n",
     "            \n",
-    "            # Update totals\n",
     "            total_stats[\"registered\"] += stats[\"registered\"]\n",
     "            total_stats[\"skipped\"] += stats[\"skipped\"]\n",
     "            total_stats[\"total\"] += stats[\"total\"]\n",
