--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -39,7 +39,13 @@
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
+    "# ✅ FIX: Suppress ALL warnings including threadpoolctl AttributeError\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.filterwarnings(\"ignore\", category=AttributeError, module=\"threadpoolctl\")\n",
+    "\n",
+    "# ✅ FIX: Also suppress the specific threadpoolctl warning at import time\n",
+    "import logging\n",
+    "logging.getLogger(\"threadpoolctl\").setLevel(logging.ERROR)\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")\n",
@@ -57,7 +63,7 @@
     "try:\n",
     "    dbutils.widgets.text(\n",
     "        \"MODELS_TO_TRAIN\",\n",
-    "        \"\",  # ✅ CHANGE 1: Empty default (Git variable will set it)\n",
+    "        \"\",\n",
     "        \"Models to Train\"\n",
     "    )\n",
     "except:\n",
@@ -187,11 +193,9 @@
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "\n",
-    "# ✅✅✅ NEW: Set parent experiment (single experiment for all models) ✅✅✅\n",
     "print(f\"🔬 Setting MLflow experiment: {BASE_EXPERIMENT_NAME}\")\n",
     "mlflow.set_experiment(BASE_EXPERIMENT_NAME)\n",
     "print(f\"✅ Experiment set successfully\\n\")\n",
-    "# ✅✅✅ END NEW ✅✅✅\n",
     "\n",
     "MODEL_CLASSES = {\n",
     "    \"random_forest\": RandomForestClassifier,\n",
@@ -210,10 +214,6 @@
     "    if MODEL_TYPE not in experiments_cfg[\"models\"]:\n",
     "        print(f\"⚠️  Skipping {MODEL_TYPE} - not in experiments_config.yml\")\n",
     "        continue\n",
-    "\n",
-    "    # ✅ REMOVED: No child experiment creation\n",
-    "    # EXPERIMENT_NAME = get_experiment_name_for_model(MODEL_TYPE, BASE_EXPERIMENT_NAME)\n",
-    "    # mlflow.set_experiment(EXPERIMENT_NAME)\n",
     "\n",
     "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
     "    EXPERIMENT_LIST = experiments_cfg[\"models\"][MODEL_TYPE][\"experiments\"]\n",
@@ -274,7 +274,7 @@
     "\n",
     "            mlflow.log_params(params)\n",
     "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
-    "            mlflow.log_param(\"experiment_name\", BASE_EXPERIMENT_NAME)  # ✅ Log parent experiment name\n",
+    "            mlflow.log_param(\"experiment_name\", BASE_EXPERIMENT_NAME)\n",
     "\n",
     "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
