--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -14,6 +14,7 @@
     "### TRAINING_script\n",
     "\n",
     "%pip install scikit-learn pyyaml xgboost\n",
+    "dbutils.library.restartPython()\n",
     "\n",
     "import mlflow\n",
     "import time\n",
